--- a/Rcode/day2.Rmd
+++ b/Rcode/day2.Rmd
@@ -28,10 +28,15 @@ dat <- omer.sorghum
 dat <- dat %>% 
   filter(env == "E3")
 
+dat %>% 
+  ggplot(aes(gen, yield))+
+  geom_boxplot()
+
 m_rcbd <- glmmTMB(yield ~ gen + (1|rep), data = dat)
 
 simulateResiduals(m_rcbd, plot = TRUE)
 ```
+
 
 ```{r}
 car::Anova(m_rcbd)
@@ -39,6 +44,18 @@ car::Anova(m_rcbd)
 
 ```{r}
 marginal_means <- emmeans(m_rcbd, ~gen)
+
+cld(marginal_means, 
+    adjust = "sidak", 
+    Letters = letters)
+```
+
+```{r}
+m_rcbd_fixed <- glmmTMB(yield ~ gen + rep, data = dat)
+marginal_means_fixed <- emmeans(m_rcbd_fixed, ~gen)
+
+
+marginal_means_fixed
 
 cld(marginal_means, 
     adjust = "sidak", 
@@ -78,6 +95,8 @@ cld(marginal_means_splitplot,
 ## Example III  
 
 ```{r}
+options(contrasts = c("contr.treatment", "contr.poly"))
+
 dd_temp <- read.csv("../../data/temperature_2.csv")
 dd_temp$Pig <- as.factor(dd_temp$Pig)
 dd_temp$Treatment <- as.factor(dd_temp$Treatment)
@@ -85,11 +104,11 @@ dd_temp$Pen <- as.factor(dd_temp$Pen)
 dd_temp$Time <- as.factor(dd_temp$Time)
 dd_temp$Temperature_F <- (dd_temp$Temperature_C *9/5) + 32  
 
-m_repeated <- glmmTMB(Temperature_C ~ Treatment * Time + ar1(1 + Time |Pig) + (1|Pen),
+m_repeated <- glmmTMB(Temperature_C ~ Treatment * Time + ar1(1 + Time |Pen),
               family = gaussian(link = "identity"),
               data = dd_temp)
 
-m_repeated <- glmmTMB(Temperature_F ~ Treatment * Time + ar1(1 + Time |Pig) + (1|Pen),
+m_repeated <- glmmTMB(Temperature_F ~ Treatment * Time + ar1(1 + Time |Pen) ,
               family = gaussian(link = "identity"),
               data = dd_temp)
 
