--- a/Rcode/day2_inclass.Rmd
+++ b/Rcode/day2_inclass.Rmd
@@ -1,8 +1,3 @@
----
-title: "models day 2"
-output: html_document
-date: "2025-03-25"
----
 ```{r}
 knitr::opts_chunk$set(fig.width=8, fig.height=4) 
 ```
@@ -130,14 +125,25 @@ cld(marginal_means_temp,
 ## Example IV  
 
 ```{r}
-dd_fecal <- read.csv("../../data/fecal_dm.csv")
+dd_fecal <- read.csv("../data/fecal_dm.csv")
 dd_fecal$Pig <- as.factor(dd_fecal$Pig)
 dd_fecal$Trt <- as.factor(dd_fecal$Trt)
 dd_fecal$Room <- as.factor(dd_fecal$Room)
 dd_fecal$Pen <- as.factor(dd_fecal$Pen)
 dd_fecal$Day <- as.factor(dd_fecal$Day)
+```
 
-m_subsampling_repeated <- glmmTMB(dry_matter_perc ~ Trt * Day + ar1(1 + Day |Pig) + (1|Room/Pen),
+```{r}
+dd_fecal %>% 
+  ggplot(aes(Day, dry_matter_perc))+
+  geom_point()+
+  facet_wrap(~Trt)
+```
+
+```{r}
+m_subsampling_repeated <- glmmTMB(dry_matter_perc ~ Trt * Day + 
+                                    ar1(1 + Day |Pig) + (1|Room/Pen),
+                                  family = gaussian(link = "identity"),
                                   data = dd_fecal)
 
 res <- simulateResiduals(m_subsampling_repeated, plot = TRUE)
@@ -149,5 +155,11 @@ marginal_means_feces <- emmeans(m_subsampling_repeated, ~ Trt|Day)
 cld(marginal_means_feces, 
     adjust = "sidak", 
     Letters = letters)
+```
+
+```{r}
+m <- glmmTMB(dry_matter_perc ~ Trt * Day + (1|Room),
+        data = dd_fecal)
+(getME(m, "b"))
 ```
 
